Changement du message de succès

--- a/application/views/scripts/fusion-des-communes/index.phtml
+++ b/application/views/scripts/fusion-des-communes/index.phtml
@@ -1,9 +1,9 @@
 <h2>Fusion des communes</h2>
 
-<?php if ($this->downloadComplete): ?>
+<?php if ($this->processComplete): ?>
     <div class="alert alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        Le fichier a bien été chargé
+        Les communes ont été fusionnées
     </div>
 <?php endif ?>
 
