Correction de la génération de rapport sur un dossier Plat'AU (#37)
* fix generation rapport avec dossier platau

* Suppression de variables non utiles

Co-authored-by: Maxime Merrien <maxime.merrien@atos.net>

--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -708,7 +708,18 @@ if ($this->GN == 2) {
 }
 
 try{
-    $chemin = $this->store->getFilePath($this->nouvellePJ, 'dossier', $this->idDossier, true);
+    $chemin = null;
+    
+    if ($this->infosDossier['ID_PLATAU'] !== null) {
+        $chemin = implode(DS, array(
+            REAL_DATA_PATH,
+            'uploads',
+            'pieces-jointes',
+            $this->nouvellePJ->ID_PIECEJOINTE.$this->nouvellePJ->EXTENSION_PIECEJOINTE
+        ));
+    } else {
+        $chemin = $this->store->getFilePath($this->nouvellePJ, 'dossier', $this->idDossier, true);
+    }
     $odf->saveToDisk($chemin);
 } catch (OdfException $e) {
 
