ajout suppression fils parent

--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -94,7 +94,7 @@
                                     <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-champ', 'rubrique' => $this->rubrique['ID_RUBRIQUE'], 'champ' => $champ['ID_CHAMP']], null, true) ?>">
                                         <i title='Modifier' class='icon-pencil'></i>
                                     </a>
-                                    <a href="" data-id="<?= $champ['ID_CHAMP'] ?>" data-rubrique-id="<?= $this->rubrique['ID_RUBRIQUE'] ?>" class="delete-champ">
+                                    <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'delete-champ', 'rubrique' => $this->rubrique['ID_RUBRIQUE'], 'champ' => $champ['ID_CHAMP']], null, true) ?>">
                                         <i title='Supprimer' class='icon-trash'></i>
                                     </a>
                                 </div>
