bug fix ID NULL + affichage valeur variable form custom vartext

--- a/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
@@ -122,7 +122,8 @@
                         <?= $this->partial('formulaire/inputChamp.phtml', [
                                 'champ' => $champ,
                                 'champsvaleurliste' => $this->champsvaleurliste,
-                                'listeChampFils' => $this->listeChampFils
+                                'listeChampFils' => $this->listeChampFils,
+                                'isChampFils' => false
                             ]); 
                         ?>
                     </div>
