--- a/application/views/scripts/formulaire/inputChamp.phtml
+++ b/application/views/scripts/formulaire/inputChamp.phtml
@@ -52,7 +52,8 @@
                     <?= $this->partial('formulaire/inputChamp.phtml', [
                         'champ' => $champsFils,
                         'champsvaleurliste' => $this->champsvaleurliste,
-                        'listeChampFils' => $this->listeChampFils
+                        'listeChampFils' => $this->listeChampFils,
+                        'isChampFils' => true
                         ]); 
                     ?>
                 </div>
