--- a/public/css/formulaire/tableauInputParent.css
+++ b/public/css/formulaire/tableauInputParent.css
@@ -1,5 +1,11 @@
 .tableInput{
     display: flex;
-    max-width: 100%;
-    overflow-x: scroll;
+    flex-wrap: wrap;
+}
+
+.colTableInput{
+    width: auto;
+    display: flex;
+    flex-flow: column;
+    margin: auto 1em;
 }
