rectif css + ajout htmlspecialchar

--- a/public/css/formulaire/tableauInputParent.css
+++ b/public/css/formulaire/tableauInputParent.css
@@ -9,3 +9,10 @@
     flex-flow: column;
     margin: auto 1em;
 }
+
+.colTableInput{
+    width: auto;
+    display: flex;
+    flex-flow: column;
+    margin: auto 1em;
+}
