--- a/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
@@ -30,23 +30,23 @@
         <?php if (!empty($rubrique['CHAMPS'])): ?>
             <?php foreach ($rubrique['CHAMPS'] as $champ): ?>
                 <div class='control-group'>
-                    <label for='champ-<?= $champ["ID_CHAMP"] ?>' class='control-label'>
-                        <strong><?= $champ['NOM'] ?></strong>
+                    <label for='champ-<?= htmlspecialchars($champ["ID_CHAMP"]) ?>' class='control-label'>
+                        <strong><?= htmlspecialchars($champ['NOM']) ?></strong>
                     </label>
                     <div class='controls'>
                         <?= $this->partial('formulaire/inputChamp.phtml', [
                                 'champ' => $champ,
                                 'champsvaleurliste' => $this->champsvaleurliste,
                                 'listeChampFils' => $this->listeChampFils,
-                                'isChampFils' => false
+                                'isChampFils' => false,
+                                'canWrite' => isset($this->canWrite) ? $this->canWrite : true
                             ]); 
                         ?>
                     </div>
                 </div>
-        </div>
             <?php endforeach ?>
+        </div>
         <?php endif ?>
-
     <?php endforeach ?>
 
 </form>
