--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -14,64 +14,37 @@
             <h4 class='h4_subtitle' id='<?= strtolower(preg_replace('/\s+/', '-', $rubrique["NOM"])) ?>'><?= $rubrique['NOM'] ?></h4>
 
             <div id='affichage-informations' class='form-horizontal'>
-                <?php if (!empty($rubrique['CHAMPS'])):
-                    $numberOfFilledField = 0;
-                    
-                    foreach ($rubrique['CHAMPS'] as $champ):
-                        if (
-                            ($champ['ID_TYPECHAMP'] !== 5 && $champ['VALEUR'] !== null)
-                            || ($champ['ID_TYPECHAMP'] === 5 && $champ['VALEUR'] !== null && $champ['VALEUR'] !== 0)
-                        ):
-                            $numberOfFilledField++ ?>
-                            <div class='control-group'>
-                                <strong class='control-label'><?= $champ['NOM'] ?></strong>
-                                <div class='controls'>
-                                    <?php switch ($champ['ID_TYPECHAMP']) {
-                                        // Texte
-                                        case 1:
-                                        // Nombre
-                                        case 4: ?>
-                                            <div class='text-control'><?= $champ['VALEUR'] ?></div>
-                                        <?php break;
-                                        // Texte long
-                                        case 2: ?>
-                                            <textarea readonly><?= $champ['VALEUR'] ?></textarea>
-                                        <?php break;
-                                        // Liste
-                                        case 3: ?>
-                                            <select disabled>
-                                                <?php foreach($this->champsvaleurliste[$champ['ID_CHAMP']] as $champvaleurliste): ?>
-                                                    <option
-                                                        value="<?= $champvaleurliste['VALEUR'] ?>"
-                                                        <?= $champvaleurliste['VALEUR'] === $champ['VALEUR'] ? 'selected' : '' ?>
-                                                    >
-                                                        <?= $champvaleurliste['VALEUR'] ?>
-                                                    </option>
-                                                <?php endforeach ?>
-                                            </select>
-                                        <?php break;
-                                        // Case à cocher
-                                        case 5: ?>
-                                            <input type='checkbox' disabled <?= $champ['VALEUR'] ? 'checked' : '' ?>>
-                                        <?php break;
-                                        default:
-                                            break;
-                                    } ?>
-                                </div>
-                            </div>
-                        <?php endif;
-                    endforeach;
-
-                    if ($numberOfFilledField === 0):
-                        echo $this->partial('formulaire/partials/partial-information-manquante.phtml', [
-                            'message' => 'Aucune valeur renseignée.'
-                        ]);
-                    endif;
-                else: 
-                    echo $this->partial('formulaire/partials/partial-information-manquante.phtml', [
+                <?php if (empty($rubrique['CHAMPS'])) : ?>
+                    <?= $this->partial('formulaire/partials/partial-information-manquante.phtml', [
                         'message' => 'Aucun champ renseigné. Contactez un administrateur Prevarisc.'
-                    ]);
-                endif ?>
+                    ]);?>
+                <?php else : ?>
+                    <div id='afficher_rubrique-<?= $rubrique['ID_RUBRIQUE'] ?>' class="<?= boolval($rubrique['DISPLAY']) === false ? 'hide' : '' ?>">
+                        <?php if (!empty($rubrique['CHAMPS'])): ?>
+                            <?php foreach ($rubrique['CHAMPS'] as $champ): ?>
+                                <div class='control-group'>
+                                    <label for='champ-<?= htmlspecialchars($champ["ID_CHAMP"]) ?>' class='control-label'>
+                                        <strong><?= htmlspecialchars($champ['NOM']) ?></strong>
+                                    </label>
+                                    <div class='controls'>
+                                        <?= $this->partial('formulaire/inputChamp.phtml', [
+                                                'champ' => $champ,
+                                                'champsvaleurliste' => $this->champsvaleurliste,
+                                                'listeChampFils' => $this->listeChampFils,
+                                                'isChampFils' => false,
+                                                'canWrite' => isset($this->canWrite) ? $this->canWrite : false
+                                            ]); 
+                                        ?>
+                                    </div>
+                                </div>
+                            <?php endforeach ?>
+                        <?php endif ?>
+                    </div>
+                <?php endif ?>
+
+                
+
+                
             </div>
         <?php endif;
     endforeach ?>
