--- a/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
@@ -24,29 +24,14 @@
             endforeach ?>
         </div>
     </div>
-    <?php foreach ($this->rubriques as $rubrique): ?>
-        <div id='afficher_rubrique-<?= $rubrique['ID_RUBRIQUE'] ?>' class="<?= boolval($rubrique['DISPLAY']) === false ? 'hide' : '' ?>">
-            <h4 class='h4_subtitle'><?= $rubrique['NOM'] ?></h4>
-            <?php if (!empty($rubrique['CHAMPS'])): ?>
-                <?php foreach ($rubrique['CHAMPS'] as $champ): ?>
-                    <div class='control-group'>
-                        <label for='champ-<?= htmlspecialchars($champ["ID_CHAMP"]) ?>' class='control-label'>
-                            <strong><?= htmlspecialchars($champ['NOM']) ?></strong>
-                        </label>
-                        <div class='controls'>
-                            <?= $this->partial('formulaire/inputChamp.phtml', [
-                                    'champ' => $champ,
-                                    'champsvaleurliste' => $this->champsvaleurliste,
-                                    'listeChampFils' => $this->listeChampFils,
-                                    'isChampFils' => false,
-                                    'canWrite' => isset($this->canWrite) ? $this->canWrite : true
-                                ]); 
-                            ?>
-                        </div>
-                    </div>
-                <?php endforeach ?>
-            <?php endif ?>
-        </div>
-    <?php endforeach ?>
+
+    <?= $this->partial('formulaire/formLoopInputChamp.phtml', [
+            'rubriques' => isset($this->rubriques) ? $this->rubriques : [],
+            'champsvaleurliste' => isset($this->champsvaleurliste) ? $this->champsvaleurliste : [] ,
+            'listeChampFils' => isset($this->listeChampFils) ? $this->listeChampFils : [] ,
+            'canWrite' => true
+        ]); 
+    ?>
+
 
 </form>
