ajout ecriture verif techniques

--- a/application/views/scripts/dossier/edit-verifications-techniques.phtml
+++ b/application/views/scripts/dossier/edit-verifications-techniques.phtml
@@ -25,74 +25,13 @@
         </div>
     </div>
 
-    <!-- TODO Faire la même avec des partials loops -->
-    <?php foreach ($this->rubriques as $rubrique): ?>
-        <div id='afficher_rubrique-<?= $rubrique['ID_RUBRIQUE'] ?>' class="<?= boolval($rubrique['DISPLAY']) === false ? 'hide' : '' ?>">
-            <h4 class='h4_subtitle'><?= $rubrique['NOM'] ?></h4>
-
-            <?php if (!empty($rubrique['CHAMPS'])):
-                foreach ($rubrique['CHAMPS'] as $champ): ?>
-                    <div class='control-group'>
-                        <label for='champ-<?= $champ["ID_CHAMP"] ?>' class='control-label'>
-                            <strong><?= $champ['NOM'] ?></strong>
-                        </label>
-                        <div class='controls'>
-                            <?php switch ($champ['ID_TYPECHAMP']) {
-                                // Texte
-                                case 1: ?>
-                                    <input
-                                        type='text'
-                                        name='champ-<?= $champ["ID_CHAMP"] ?>'
-                                        value='<?= htmlspecialchars($champ["VALEUR"], ENT_QUOTES) ?>'
-                                    >
-                                <?php break;
-                                // Texte long
-                                case 2: ?>
-                                    <textarea name='champ-<?= $champ["ID_CHAMP"] ?>'><?= $champ["VALEUR"] ?></textarea>
-                                <?php break;
-                                // Liste
-                                case 3: ?>
-                                    <select name='champ-<?= $champ["ID_CHAMP"] ?>'>
-                                        <option selected value>Sélectionnez un élément</option>
-                                        <?php foreach($this->champsvaleurliste[$champ['ID_CHAMP']] as $champvaleurliste): ?>
-                                            <option
-                                                value="<?= htmlspecialchars($champvaleurliste['VALEUR'], ENT_QUOTES) ?>"
-                                                <?= $champvaleurliste['VALEUR'] === $champ['VALEUR'] ? 'selected' : '' ?>
-                                            >
-                                                <?= $champvaleurliste['VALEUR'] ?>
-                                            </option>
-                                        <?php endforeach ?>
-                                    </select>
-                                <?php break;
-                                // Nombre
-                                case 4: ?>
-                                    <input type='number' name='champ-<?= $champ["ID_CHAMP"] ?>' min='0' value='<?= $champ["VALEUR"] ?>'>
-                                <?php break;
-                                // Case à cocher
-                                case 5: ?>
-                                    <input
-                                        type="hidden"
-                                        name='champ-<?= $champ["ID_CHAMP"] ?>'
-                                        value="0"
-                                    >
-                                    <input
-                                        type="checkbox"
-                                        name='champ-<?= $champ["ID_CHAMP"] ?>'
-                                        value="1"
-                                        <?= $champ['VALEUR'] ? 'checked' : '' ?>
-                                    >
-                                <?php break;
-                                default:
-                                    break;
-                            } ?>
-                        </div>
-                    </div>
-                <?php endforeach;
-            else:
-                echo $this->partial('formulaire/partials/partial-information-manquante.phtml', [
-                    'message' => 'Aucun champ renseigné. Contactez un administrateur Prevarisc.'
-                ]);
-            endif ?>
-        </div>
-    <?php endforeach ?>
+    <div id='affichage-informations' class='form-horizontal'>
+        <?= $this->partial('formulaire/formLoopInputChamp.phtml', [
+                'rubriques' => isset($this->rubriques) ? $this->rubriques : [],
+                'champsvaleurliste' => isset($this->champsvaleurliste) ? $this->champsvaleurliste : [] ,
+                'listeChampFils' => isset($this->listeChampFils) ? $this->listeChampFils : [] ,
+                'canWrite' => true
+            ]); 
+        ?>
+    </div>
 </form>
